# OpenBench

./: .envrc  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/nginx/: bench.reb00t.io.conf  configure-nginx-bench.reb00t.io.sh
scripts/: build.sh  deploy.sh  get_logs.sh
src/: main.py
src/data/: benchmarks.json
src/data/models/: claude-4-5-opus.json  claude-opus-4-6.json  deepseek-v3.2.json  gemini-3-pro.json  gemini-3.1-pro.json  gemma-4-31b.json  glm-4.7.json  glm-5.json  gpt-3.5-turbo.json  gpt-3.json  gpt-4-turbo.json  gpt-4.5.json  gpt-4.json  gpt-4o.json  gpt-5.4.json  gpt-5.json  gpt-oss-120b.json  gpt5.2.json  kimi-k2.5.json  mistral-small-4.json  nemotron-3-super-120b.json  openai-o1.json  openai-o3.json  qwen3-max-thinking.json  qwen3.5-122b.json  qwen3.5-397b.json
src/templates/: index.html
test/: e2e.sh  test_benchmarks.py
